@@ -1,6 +1,11 @@
 FlightPath 6.x Changelog
 ========================
 
+2022-06-17
+  Added new function to DatabaseHandler, where we can request a new advising_session_token, and be guaranteed that it does not already exist.  Updated FlightPath class
+  to make use of it. 
+  
+
 2022-06-15
   Modified user module to make it easier to filter for users.  Made it function more like FP 5, where setting a filter actually shows you
   all values under that filter, and you don't have to search by letter as well.  For students, this is true, except we do not reset values
